--- a/templates/add_tasks.html
+++ b/templates/add_tasks.html
@@ -55,7 +55,8 @@
         <!--Submit Button-->
         <div class="row">
             <div class="col s4 offset-s4 ">
-                <button type="submit" class="btn-large pink accent-1 submit-button">
+                <a href="{{ url_for('homework') }}" class="btn-large red accent-4 form-button">Cancel</a>
+                <button type="submit" class="btn-large pink accent-1 form-button submit-button">
                     Submit New Task 
                 </button>
             </div>
