--- a/templates/register.html
+++ b/templates/register.html
@@ -29,6 +29,26 @@
                 </div>
             </div>
 
+            <div class="row">
+                <div class="input-field registration-form col s10 offset-s1">
+                    <i class="fas fa-user prefix pink-text text-accent-1 text-shadow"></i>
+                    <input id="firstname" name="firstname" type="text" minlength="4" maxlength="15" 
+                        pattern="^[a-zA-Z0-9]{5,15}$" class="validate" 
+                        placeholder="Enter First Name" required>
+                    
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="input-field registration-form col s10 offset-s1">
+                    <i class="fas fa-user prefix pink-text text-accent-1 text-shadow"></i>
+                    <input id="surname" name="surname" type="text" minlength="4" maxlength="15" 
+                        pattern="^[a-zA-Z0-9]{5,15}$" class="validate" 
+                        placeholder="Enter Surname" required>
+                    
+                </div>
+            </div>
+
             <!-- Enter Password -->
             <div class="row">
                 <div class="input-field registration-form col s10 offset-s1">
