--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -66,7 +66,7 @@
         <div class="row">
             <div class="col s4 offset-s4 ">
                 <!--Cancel changes button-->
-                <a href="{{ url_for('homework') }}" class="btn-large red form-button">Cancel</a>
+                <a href="{{ url_for('homework') }}" class="btn-large red accent-4 form-button">Cancel</a>
                 <!--Submit changes button-->
                 <button type="submit" class="btn-large pink accent-1 form-button">
                     Save Changes 
