--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
         <!-- top navbar-->
         <nav class="nav-extended grey darken-2">
             <div class="nav-wrapper">
-                <a href="{{ url_for('homework') }}" class="brand-logo pink-text text-accent-1 text-shadow">Belles' Homework Manager</a>
+                <a href="#" class="brand-logo pink-text text-accent-1 text-shadow">Belles' Homework Manager</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
                     
