--- a/templates/leads.html
+++ b/templates/leads.html
@@ -19,8 +19,7 @@
                 Due Date: {{ homework.due_date }}
 
                 {% if users.is_musicteam == "on" %}
-                
-                
+               
                 <!-- Modal Trigger -->
                 <a class="red accent-4 text-white form-button btn modal-trigger" href="#modal1">Delete</a>
 
@@ -38,7 +37,7 @@
 
 
                 <a href="{{ url_for('edit_task', homework_id=homework._id) }}"
-                    class="btn-small form-button edit-button white">Edit</a>
+                    class="btn-small edit-button form-button white">Edit</a>
                 {% endif %}
 
             </div>
