--- a/templates/login.html
+++ b/templates/login.html
@@ -29,7 +29,7 @@
 
             <!--Log In Button-->
             <div class="row">
-                <button type="submit" class="col s4 offset-s4 btn-large pink accent-1 submit-button">Log in</button>
+                <button type="submit" class="col s4 offset-s4 btn-large pink accent-1 form-button submit-button">Log in</button>
             </div>
         </div>
     </form>
