--- a/templates/homework.html
+++ b/templates/homework.html
@@ -1,44 +1,55 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="center-align page-title">Homework Tasks</h3>
+<h3 class="center-align page-title">Homework Tasks</h3>
+
+<div class="row">
+
     
-    <div class="row">
-        <div class="col s12 m6 l4">
-            <a href="{{ url_for('musicteam_tasks') }}"><div class="card-panel pink accent-1 section-link">
+    <div class="col s12 m6 l4">
+        <a href="{{ url_for('musicteam_tasks') }}">
+            <div class="card-panel pink accent-1 section-link">
                 Music Team
-            </div></a>
-        </div>
-        <div class="col s12 m6 l4">
-            <a href="{{ url_for('wholechorus_tasks') }}"><div class="card-panel pink accent-1 section-link">
-                Whole Chorus
-            </div></a>
-        </div>
-        <div class="col s12 m6 l4">
-            <a href="{{ url_for('tenor_tasks') }}"><div class="card-panel pink accent-1 section-link">
-                Tenor Section
-            </div></a>
-        </div>
-        <div class="col s12 m6 l4">
-            <a href="{{ url_for('lead_tasks') }}"><div class="card-panel pink accent-1 section-link">
-                Lead Section
-            </div></a>
-        </div>
-        <div class="col s12 m6 l4">
-            <a href="{{ url_for('bari_tasks') }}"><div class="card-panel pink accent-1 section-link">
-                Bari Section
-            </div></a>
-        </div>
-        <div class="col s12 m6 l4">
-            <a href="{{ url_for('bass_tasks') }}"><div class="card-panel pink accent-1 section-link">
-                Bass Section
-            </div></a>
-        </div>
-        
+            </div>
+        </a>
     </div>
     
- 
-
-
     
+    <div class="col s12 m6 l4">
+        <a href="{{ url_for('wholechorus_tasks') }}">
+            <div class="card-panel pink accent-1 section-link">
+                Whole Chorus
+            </div>
+        </a>
+    </div>
+    <div class="col s12 m6 l4">
+        <a href="{{ url_for('tenor_tasks') }}">
+            <div class="card-panel pink accent-1 section-link">
+                Tenor Section
+            </div>
+        </a>
+    </div>
+    <div class="col s12 m6 l4">
+        <a href="{{ url_for('lead_tasks') }}">
+            <div class="card-panel pink accent-1 section-link">
+                Lead Section
+            </div>
+        </a>
+    </div>
+    <div class="col s12 m6 l4">
+        <a href="{{ url_for('bari_tasks') }}">
+            <div class="card-panel pink accent-1 section-link">
+                Bari Section
+            </div>
+        </a>
+    </div>
+    <div class="col s12 m6 l4">
+        <a href="{{ url_for('bass_tasks') }}">
+            <div class="card-panel pink accent-1 section-link">
+                Bass Section
+            </div>
+        </a>
+    </div>
+</div>
+
 {% endblock %}
