--- a/templates/leads.html
+++ b/templates/leads.html
@@ -19,28 +19,37 @@
                 Due Date: {{ homework.due_date }}
 
                 {% if users.is_musicteam == "on" %}
-               
                 <!-- Modal Trigger -->
-                <a class="red accent-4 text-white form-button btn modal-trigger" href="#modal1">Delete</a>
-
-                <!-- Modal Structure -->
-                <div id="modal1" class="modal">
-                    <div class="modal-content">
-                        <h4>Delete Task</h4>
-                        <p>Are you sure you wish to delete this task?</p>
+                <div class="container task-buttons">
+                    <div class="row">
+                        <div class="col-xs-2">
+                            <a href="{{ url_for('edit_task', homework_id=homework._id) }}"
+                                class="btn-small form-button submit-button edit-button white">Edit</a>
+                
+                        </div>
                     </div>
-                    <div class="modal-footer">
-                        <a href="{{ url_for ('homework') }}" class="modal-close pink lighten-2 white-text form-button btn-flat">Cancel</a>
-                        <a href="{{ url_for ('delete_task', homework_id=homework._id) }}" class="modal-close red accent-4 white-text form-button btn-flat">Delete</a>
+                    <div class="row">
+                        <div class="col-xs-2">
+                            <a class="red accent-4 form-button text-white btn modal-trigger" href="#modal1">Delete</a>
+
+                            <!-- Modal Structure -->
+                            <div id="modal1" class="modal">
+                                <div class="modal-content">
+                                    <h4>Delete Task</h4>
+                                    <p>Are you sure you wish to delete this task?</p>
+                                </div>
+                                <div class="modal-footer">
+                                    <a href="{{ url_for ('homework') }}"
+                                        class="modal-close pink lighten-2 white-text form-button btn-flat">Cancel</a>
+                                    <a href="{{ url_for ('delete_task', homework_id=homework._id) }}"
+                                        class="modal-close red accent-4 white-text form-button btn-flat">Delete</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-
-
-                <a href="{{ url_for('edit_task', homework_id=homework._id) }}"
-                    class="btn-small edit-button form-button white">Edit</a>
-                {% endif %}
-
             </div>
+            {% endif %}
             <div class="card-reveal">
                 <div class="card-title grey-text text-darken-4">{{ homework.song_name }}<i
                         class="fas fa-times right"></i>
