--- a/templates/register.html
+++ b/templates/register.html
@@ -23,7 +23,7 @@
                 <div class="input-field registration-form col s10 offset-s1">
                     <i class="fas fa-user prefix pink-text text-accent-1 text-shadow"></i>
                     <input id="username" name="username" type="text" minlength="4" maxlength="15" 
-                        pattern="^[a-zA-Z0-9]{5,15}$" class="validate" 
+                        pattern="^[a-zA-Z]{5,15}$" class="validate" 
                         placeholder="Enter Username" required>
                     
                 </div>
@@ -32,8 +32,8 @@
             <div class="row">
                 <div class="input-field registration-form col s10 offset-s1">
                     <i class="fas fa-user prefix pink-text text-accent-1 text-shadow"></i>
-                    <input id="firstname" name="firstname" type="text" minlength="4" maxlength="15" 
-                        pattern="^[a-zA-Z0-9]{5,15}$" class="validate" 
+                    <input id="firstname" name="firstname" type="text" 
+                        pattern="^[a-zA-Z]$" class="validate" 
                         placeholder="Enter First Name" required>
                     
                 </div>
@@ -42,8 +42,8 @@
             <div class="row">
                 <div class="input-field registration-form col s10 offset-s1">
                     <i class="fas fa-user prefix pink-text text-accent-1 text-shadow"></i>
-                    <input id="surname" name="surname" type="text" minlength="4" maxlength="15" 
-                        pattern="^[a-zA-Z0-9]{5,15}$" class="validate" 
+                    <input id="surname" name="surname" type="text" 
+                        pattern="^[a-zA-Z]$" class="validate" 
                         placeholder="Enter Surname" required>
                     
                 </div>
