--- a/templates/bari.html
+++ b/templates/bari.html
@@ -17,7 +17,7 @@
                 {{ homework.song_name }}<br>
                 Due Date: {{ homework.due_date }}
 
-                {% if users.is_musicteam == "on" %}
+                {% if user.is_musicteam == "on" %}
                 <!-- Modal Trigger -->
                 <div class="container task-buttons">
                     <div class="row">
