--- a/templates/bari.html
+++ b/templates/bari.html
@@ -17,6 +17,7 @@
                 {{ homework.song_name }}<br>
                 Due Date: {{ homework.due_date }}
 
+                {% if session.user %}
                 {% if user.is_musicteam == "on" %}
                 <!-- Modal Trigger -->
                 <div class="container task-buttons">
@@ -48,6 +49,7 @@
                     </div>
                 </div>
             </div>
+            {% endif %}
             {% endif %}
             <div class="card-reveal">
                 <div class="card-title grey-text text-darken-4">{{ homework.song_name }}<i
