--- a/templates/tenor.html
+++ b/templates/tenor.html
@@ -16,7 +16,8 @@
             <div class="card-title activator card-content center-align"><i class="fas fa-music"></i>
                 {{ homework.song_name }}<br>
                 Due Date: {{ homework.due_date }}
-
+                
+                {% if session.user %}
                 {% if user.is_musicteam == "on" %}
                 <!-- Modal Trigger -->
                 <div class="container task-buttons">
@@ -48,6 +49,7 @@
                     </div>
                 </div>
             </div>
+            {% endif %}
             {% endif %}
             <div class="card-reveal">
                 <div class="card-title grey-text text-darken-4">{{ homework.song_name }}<i
