--- a/templates/register.html
+++ b/templates/register.html
@@ -59,6 +59,16 @@
                 </div>
             </div>
 
+            <!-- Confirm Password -->
+            <div class="row">
+                <div class="input-field registration-form col s10 offset-s1">
+                    <i class="fas fa-lock prefix pink-text text-accent-1 text-shadow"></i>
+                    <input id="confirm-password" name="confirm-password" type="password" minlength="5" maxlength="15" 
+                        pattern="^[a-zA-Z0-9]{5,}$" class="validate" placeholder="Confirm Password" required>
+                    
+                </div>
+            </div>
+
             <!--Register User Button-->
             <div class="row">
                 <button type="submit" class="col s4 offset-s4 btn-large form-button pink accent-1 submit-button">Register</button>
