--- a/templates/register.html
+++ b/templates/register.html
@@ -27,37 +27,21 @@
                         placeholder="Enter Username" required>
                     
                 </div>
+                
             </div>
-
-            <div class="row">
-                <div class="input-field registration-form col s10 offset-s1">
-                    <i class="fas fa-user prefix pink-text text-accent-1 text-shadow"></i>
-                    <input id="firstname" name="firstname" type="text" 
-                        pattern="^[a-zA-Z0-9]{2,15}$" class="validate" 
-                        placeholder="Enter First Name" required>
-                    
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="input-field registration-form col s10 offset-s1">
-                    <i class="fas fa-user prefix pink-text text-accent-1 text-shadow"></i>
-                    <input id="surname" name="surname" type="text" minlength="2" maxlength="15" 
-                        pattern="^[a-zA-Z0-9]{2,15}$" class="validate" 
-                        placeholder="Enter Surname" required>
-                    
-                </div>
-            </div>
+            <p>Use first name followed by surname initial</p>
 
             <!-- Enter Password -->
             <div class="row">
                 <div class="input-field registration-form col s10 offset-s1">
                     <i class="fas fa-lock prefix pink-text text-accent-1 text-shadow"></i>
                     <input id="password" name="password" type="password" minlength="5" maxlength="15" 
-                        pattern="^[a-zA-Z0-9]{5,}$" class="validate" placeholder="Enter Password (minimum 5 characters)" required>
+                        pattern="^[a-zA-Z0-9]{5,}$" class="validate" placeholder="Enter Password" required>
+                    
                     
                 </div>
             </div>
+            <p>(minimum 5 characters)</p>
 
             <!-- Confirm Password -->
             <div class="row">
