--- a/templates/register.html
+++ b/templates/register.html
@@ -24,24 +24,24 @@
                     <i class="fas fa-user prefix pink-text text-accent-1 text-shadow"></i>
                     <input id="username" name="username" type="text" minlength="4" maxlength="15" 
                         pattern="^[a-zA-Z]{5,15}$" class="validate" 
-                        placeholder="Enter Username" required>
+                        placeholder="Enter Username. Use first name and initial" required>
                     
                 </div>
                 
             </div>
-            <p>Use first name followed by surname initial</p>
+            <p></p>
 
             <!-- Enter Password -->
             <div class="row">
                 <div class="input-field registration-form col s10 offset-s1">
                     <i class="fas fa-lock prefix pink-text text-accent-1 text-shadow"></i>
                     <input id="password" name="password" type="password" minlength="5" maxlength="15" 
-                        pattern="^[a-zA-Z0-9]{5,}$" class="validate" placeholder="Enter Password" required>
+                        pattern="^[a-zA-Z0-9]{5,}$" class="validate" placeholder="Enter Password (minimum 5 characters)" required>
                     
                     
                 </div>
             </div>
-            <p>(minimum 5 characters)</p>
+            
 
             <!-- Confirm Password -->
             <div class="row">
