--- a/templates/add_tasks.html
+++ b/templates/add_tasks.html
@@ -64,4 +64,16 @@
     </form>
 </div>
 
+{% if user.is_musicteam == "on" %}
+<div class="row">      
+ <div class="col s4 offset-s4">
+        <a href="{{ url_for('add_task') }}">
+            <div class="card-panel pink accent-1 section-link">
+                Add Tasks
+            </div>
+        </a>
+    </div> 
+</div>  
+{% endif %}
+
 {% endblock %}
