--- a/templates/bass.html
+++ b/templates/bass.html
@@ -6,7 +6,6 @@
     more info. Please give us a shout if there's
     anything you're unsure of!</div>
 
-
 <div class="row">
 
     {% for homework in homework %}
@@ -29,10 +28,11 @@
                 
                         </div>
                     </div>
+                   
                     <div class="row">
                         <div class="col-xs-2">
                             <a class="red accent-4 form-button text-white btn modal-trigger" href="#modal1">Delete</a>
-
+                
                             <!-- Modal Structure -->
                             <div id="modal1" class="modal">
                                 <div class="modal-content">
@@ -49,8 +49,9 @@
                         </div>
                     </div>
                 </div>
+                {% endif %} 
             </div>
-            {% endif %}
+                
             
             <div class="card-reveal">
                 <div class="card-title grey-text text-darken-4">{{ homework.song_name }}<i
@@ -65,7 +66,20 @@
     {% endif %}
     {% endfor %}
 
+  
+
 </div>
 
+{% if user.is_musicteam == "on" %}
+<div class="row">      
+ <div class="col s4 offset-s4">
+        <a href="{{ url_for('add_task') }}">
+            <div class="card-panel pink accent-1 section-link">
+                Add Tasks
+            </div>
+        </a>
+    </div> 
+</div>  
+{% endif %}
 
 {% endblock %}
