--- a/templates/leads.html
+++ b/templates/leads.html
@@ -1,11 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align page-title">Leads' Tasks</h3>
+<h3 class="center-align page-title">Leads Tasks</h3>
 <div class="center-align">All tasks have been set by either Lucy or your section lead, just click on the song title for
     more info. Please give us a shout if there's
     anything you're unsure of!</div>
 
+{% if user.is_musicteam == "on" %}
+<div class="row">      
+ <div class="col s4 offset-s4">
+        <a href="{{ url_for('add_task') }}">
+            <div class="card-panel pink accent-1 section-link">
+                Add Tasks
+            </div>
+        </a>
+    </div> 
+</div>  
+{% endif %}
 
 <div class="row">
 
@@ -29,10 +40,11 @@
                 
                         </div>
                     </div>
+                   
                     <div class="row">
                         <div class="col-xs-2">
                             <a class="red accent-4 form-button text-white btn modal-trigger" href="#modal1">Delete</a>
-
+                
                             <!-- Modal Structure -->
                             <div id="modal1" class="modal">
                                 <div class="modal-content">
@@ -49,8 +61,9 @@
                         </div>
                     </div>
                 </div>
+                {% endif %} 
             </div>
-            {% endif %}
+                
             
             <div class="card-reveal">
                 <div class="card-title grey-text text-darken-4">{{ homework.song_name }}<i
@@ -65,7 +78,10 @@
     {% endif %}
     {% endfor %}
 
+  
+
 </div>
+
 
 
 {% endblock %}
