--- a/templates/bass.html
+++ b/templates/bass.html
@@ -6,6 +6,18 @@
     more info. Please give us a shout if there's
     anything you're unsure of!</div>
 
+{% if user.is_musicteam == "on" %}
+<div class="row">      
+ <div class="col s4 offset-s4 add-task-button">
+        <a href="{{ url_for('add_task') }}">
+            <div class="card-panel pink accent-1 section-link">
+                Add Tasks
+            </div>
+        </a>
+    </div> 
+</div>  
+{% endif %}
+
 <div class="row">
 
     {% for homework in homework %}
@@ -19,7 +31,7 @@
                 
                 
                 {% if user.is_musicteam == "on" %}
-                <!-- Modal Trigger -->
+                
                 <div class="container task-buttons">
                     <div class="row">
                         <div class="col-xs-2">
@@ -29,12 +41,13 @@
                         </div>
                     </div>
                    
+                    <!-- Modal Trigger -->
                     <div class="row">
                         <div class="col-xs-2">
-                            <a class="red accent-4 form-button text-white btn modal-trigger" href="#modal1">Delete</a>
+                            <a class="red accent-4 form-button text-white btn modal-trigger" href="#{{ homework._id }}">Delete</a>
                 
                             <!-- Modal Structure -->
-                            <div id="modal1" class="modal">
+                            <div id="{{ homework._id }}" class="modal"  >
                                 <div class="modal-content">
                                     <h4>Delete Task</h4>
                                     <p>Are you sure you wish to delete this task?</p>
@@ -48,6 +61,7 @@
                             </div>
                         </div>
                     </div>
+                    
                 </div>
                 {% endif %} 
             </div>
@@ -69,17 +83,5 @@
   
 
 </div>
-
-{% if user.is_musicteam == "on" %}
-<div class="row">      
- <div class="col s4 offset-s4">
-        <a href="{{ url_for('add_task') }}">
-            <div class="card-panel pink accent-1 section-link">
-                Add Tasks
-            </div>
-        </a>
-    </div> 
-</div>  
-{% endif %}
 
 {% endblock %}
