--- a/templates/leads.html
+++ b/templates/leads.html
@@ -8,7 +8,7 @@
 
 {% if user.is_musicteam == "on" %}
 <div class="row">      
- <div class="col s4 offset-s4">
+ <div class="col s4 offset-s4 add-task-button">
         <a href="{{ url_for('add_task') }}">
             <div class="card-panel pink accent-1 section-link">
                 Add Tasks
@@ -43,10 +43,10 @@
                    
                     <div class="row">
                         <div class="col-xs-2">
-                            <a class="red accent-4 form-button text-white btn modal-trigger" href="#modal1">Delete</a>
+                            <a class="red accent-4 form-button text-white btn modal-trigger" href="#{{ homework._id }}">Delete</a>
                 
                             <!-- Modal Structure -->
-                            <div id="modal1" class="modal">
+                            <div id="{{ homework._id }}" class="modal">
                                 <div class="modal-content">
                                     <h4>Delete Task</h4>
                                     <p>Are you sure you wish to delete this task?</p>
