--- a/templates/register.html
+++ b/templates/register.html
@@ -9,11 +9,11 @@
 
             <div class="row">
 				<div class="input-field col s6 offset-s3">
-					<div class="switch">                        
+					<div class="switch center-align">                        
 						<label for="is_musicteam">
                             <input type="checkbox" id="is_musicteam" name="is_musicteam">
                             <span class="lever"></span>
-                            Are you a member of the music team?
+                            <p>Are you a member of the music team?<p>
                         </label>
 					</div>
 				</div>
@@ -24,7 +24,7 @@
                     <i class="fas fa-user prefix pink-text text-accent-1 text-shadow"></i>
                     <input id="username" name="username" type="text" minlength="4" maxlength="15" 
                         pattern="^[a-zA-Z]{5,15}$" class="validate" 
-                        placeholder="Enter Username. Use first name and initial" required>
+                        placeholder="Enter Username" required>
                     
                 </div>
                 
@@ -55,7 +55,7 @@
 
             <!--Register User Button-->
             <div class="row">
-                <button type="submit" class="col s4 offset-s4 btn-large form-button pink accent-1 submit-button">Register</button>
+                <button type="submit" class="col s6 offset-s3 btn-large form-button pink accent-1 submit-button">Register</button>
             </div>
         </div>
     </form>
