--- a/templates/wholechorus.html
+++ b/templates/wholechorus.html
@@ -54,7 +54,7 @@
                                 <div class="modal-footer">
                                     <a href="{{ url_for ('homework') }}"
                                         class="modal-close pink lighten-2 white-text form-button btn-flat">Cancel</a>
-                                    <a href="{{ url_for ('delete_task', homework_id=homework._id) }}"
+                                    <a href="{{ url_for ('delete_task_wholechorus', homework_id=homework._id) }}"
                                         class="modal-close red accent-4 white-text form-button btn-flat">Delete</a>
                                 </div>
                             </div>
