--- a/templates/add_tasks.html
+++ b/templates/add_tasks.html
@@ -11,7 +11,7 @@
             <div class="input-field col s12">
                 <i class="fas fa-microphone prefix pink-text text-accent-1"></i>
                 <select id="section_name" name="section_name" class="validate" required>
-                    <option value="" disabled selected>Choose Section or Whole Chorus</option>
+                    <option value="" disabled selected>Choose Section</option>
                     {% for section in sections %}
                         <option value="{{ section.section_name }}">{{ section.section_name }}</option> 
                     {% endfor %}                   
@@ -54,26 +54,15 @@
         </div>
         <!--Submit Button-->
         <div class="row">
-            <div class="col s4 offset-s4 ">
-                <a href="{{ url_for('homework') }}" class="btn-large red accent-4 form-button">Cancel</a>
-                <button type="submit" class="btn-large pink accent-1 form-button submit-button">
+            <div class="center-align">
+                <button type="submit" class="btn-large pink accent-1 form-button">
                     Submit New Task 
                 </button>
+                <a href="{{ url_for('homework') }}" class="btn-large red accent-4 form-button">Cancel</a>
+                
             </div>
         </div>
     </form>
 </div>
-
-{% if user.is_musicteam == "on" %}
-<div class="row">      
- <div class="col s4 offset-s4">
-        <a href="{{ url_for('add_task') }}">
-            <div class="card-panel pink accent-1 section-link">
-                Add Tasks
-            </div>
-        </a>
-    </div> 
-</div>  
-{% endif %}
 
 {% endblock %}
