--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -6,7 +6,7 @@
 <div class="row card-panel add-tasks-form">
 
     <form class="col s12" method="POST" action="{{ url_for('edit_task', homework_id=homework._id) }}">
-        <!--Section selection-->,
+        <!--Section selection-->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-microphone prefix pink-text text-accent-1"></i>
@@ -64,13 +64,14 @@
         </div>
         <!--Submit Button-->
         <div class="row">
-            <div class="col s4 offset-s4 ">
+            <div class="center-align">
+            <!--Submit changes button-->
+                <button type="submit" class="btn-large pink accent-1 form-button">
+                    Save Changes
+                </button>
                 <!--Cancel changes button-->
                 <a href="{{ url_for('homework') }}" class="btn-large red accent-4 form-button">Cancel</a>
-                <!--Submit changes button-->
-                <button type="submit" class="btn-large pink accent-1 form-button">
-                    Save Changes 
-                </button>
+                
             </div>
         </div>
     </form>
