--- a/templates/bari.html
+++ b/templates/bari.html
@@ -32,18 +32,12 @@
                 
                 {% if user.is_musicteam == "on" %}
                 <!-- Modal Trigger -->
-                <div class="container task-buttons">
-                    <div class="row">
-                        <div class="col-xs-2">
-                            <a href="{{ url_for('edit_task', homework_id=homework._id) }}"
-                                class="btn-small form-button submit-button edit-button white">Edit</a>
-                
-                        </div>
-                    </div>
-                   
-                    <div class="row">
-                        <div class="col-xs-2">
-                            <a class="red accent-4 form-button text-white btn modal-trigger" href="#{{ homework._id }}">Delete</a>
+                <div class="card-action card-links">
+                    
+                        
+                            <a href="{{ url_for('edit_task', homework_id=homework._id) }}" class = "white-text section-link">Edit</a>             
+                            <a href="#{{ homework._id }}" class ="modal-trigger white-text section-link">Delete</a>
+                </div>
                 
                             <!-- Modal Structure -->
                             <div id="{{ homework._id }}" class="modal">
