--- a/templates/bass.html
+++ b/templates/bass.html
@@ -6,9 +6,9 @@
     more info. Please give us a shout if there's
     anything you're unsure of!</div>
 
-
+{% if user.is_musicteam == "on" %}
 <div class="row">      
- <div class="col s8 offset-s2 m4 offset-m4 add-task-button">
+ <div class="col s4 offset-s4 add-task-button">
         <a href="{{ url_for('add_task') }}">
             <div class="card-panel pink accent-1 section-link">
                 Add Tasks
@@ -16,7 +16,7 @@
         </a>
     </div> 
 </div>  
-
+{% endif %}
 
 <div class="row">
 
@@ -31,23 +31,15 @@
                 
                 
                 {% if user.is_musicteam == "on" %}
-                
-                <div class="container task-buttons">
-                    <div class="row">
-                        <div class="col-xs-2">
-                            <a href="{{ url_for('edit_task', homework_id=homework._id) }}"
-                                class="btn-small form-button submit-button edit-button white">Edit</a>
-                
-                        </div>
+                <!-- Modal Trigger -->
+                <div class="card-action card-links">
                     
-                   
-                    <!-- Modal Trigger -->
-                    
-                        <div class="col-xs-2">
-                            <a class="red accent-4 form-button text-white btn modal-trigger" href="#{{ homework._id }}">Delete</a>
-                
+                        
+                            <a href="{{ url_for('edit_task', homework_id=homework._id) }}" class = "white-text section-link">Edit</a>             
+                            <a href="#{{ homework._id }}" class ="modal-trigger white-text section-link">Delete</a>
+                </div>
                             <!-- Modal Structure -->
-                            <div id="{{ homework._id }}" class="modal"  >
+                            <div id="{{ homework._id }}" class="modal">
                                 <div class="modal-content">
                                     <h4>Delete Task</h4>
                                     <p>Are you sure you wish to delete this task?</p>
@@ -55,14 +47,13 @@
                                 <div class="modal-footer">
                                     <a href="{{ url_for ('homework') }}"
                                         class="modal-close pink lighten-2 white-text form-button btn-flat">Cancel</a>
-                                    <a href="{{ url_for ('delete_task_bass', homework_id=homework._id) }}"
+                                    <a href="{{ url_for ('delete_task_musicteam', homework_id=homework._id) }}"
                                         class="modal-close red accent-4 white-text form-button btn-flat">Delete</a>
                                 </div>
                             </div>
-                        </div>
-                    </div>
+                        
                     
-                </div>
+                
                 {% endif %} 
             </div>
                 
@@ -83,5 +74,7 @@
   
 
 </div>
+
+
 
 {% endblock %}
